# pyOSRD

./: .coverage  .coveragerc  .env  .gitignore  CHANGELOG.md  README.md  README_runs  bug_add_signal.port.txt  build_all_simulations.py  fixtures.py  generate_infra.ipynb  infra1.py  myInfra.json  mySim.json  mySim.json_fix  nodes_embedding.ipynb  osrd_standalone.sh  pyproject.toml  pytorch.ipynb  qlearning.ipynb  qlearning_2trains.ipynb  qlearning_2trains_env_v0.ipynb  r.json  read_infra1.ipynb  read_jsons.ipynb  regul_env.py  requirements.txt  res.json  res1.json  results.json  schedules.py  schedules_examples.ipynb  setup.py  sim1.json  sim1.json_fix  simulation.json  simulation1_2trains.ipynb
2cvg/: infra.json  read_sim.ipynb  results.json  run.py  simulation.json
app/: app.py
cases/: read_sim.ipynb  tests_schedules.ipynb
cvg/: infra.json  read_sim.ipynb  run.py  simulation.json
cvg_cantons/: read_sim.ipynb  simulation.json
dqn_notebooks/: qlearning_2trains.ipynb  qlearning_2trains_env_v0.ipynb
manal_infra/: read_sim.ipynb  results.json
notebooks/: RH_use_case.ipynb  add_delay.ipynb  decision_tree_agent.ipynb  mermaid_no_request.ipynb  new_regul_env.ipynb  schedules_extensions.ipynb  spacing_conflicts.ipynb  test_cases_run.ipynb
notebooks_explo/: RH_use_case.ipynb  SP_use_case.ipynb  add_delay.ipynb  class_osrd.ipynb  decision_tree.ipynb  env_and_actions.ipynb  error_sim.ipynb  explo_intervals.ipynb  france.ipynb  infra.json  load_infra_sim.ipynb  merge_switch_zones.ipynb  new_schedule_from_osrd.ipynb  new_use_case.ipynb  new_version_generator_082023.ipynb  osrdregul.ipynb  pts_encountered.ipynb  results.json  schedules_3trains.ipynb  schedules_examples.ipynb  schedules_extensions.ipynb  schedules_tests.ipynb  set_trains.ipynb  simulation.json  simulation1_2trains.ipynb  spacing_conflicts.ipynb  test_cases_run.ipynb  tests_schedules.ipynb  use_case.ipynb  visualisations.ipynb  visualisations_small_infra.ipynb  viz.ipynb  viz_folium copy.ipynb  viz_folium.ipynb  viz_folium_timstamps.ipynb  viz_plotly.ipynb  zone_position.ipynb
railjson_generator/: __init__.py
simulation0/: infra.json  read_sim.ipynb  results.json  run.py
simulation1/: read_sim.ipynb  results.json  run.py
tests/: _build_case_cvg_dvg.py  _build_case_two_lanes.py  _build_infra_sim_test.py  _build_infra_test.py  _build_osrd_case.py  conftest.py  fixtures.py  test_modify_simulations.py  test_osrd.py  test_osrd_add_delay.py  test_read_json.py  (+11 more)
(+417 files in other folders)
