[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlway"
version = "0.0.6"
authors = [
  { name="Renan HILBERT", email="renan.hilbert.ext@eurodecision.com" },
]
description = "Railway traffic regulation using AI/RL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    'gymnasium',
    'networkx >= 3.0',
    'matplotlib>= 3.6.3',
    'pandas',
    "python-dotenv",
    "folium",
    "plotly",
    "haversine",
    "typing-inspect>=0.8.0",
    "typing_extensions>=4.5.0",
    'railjson_generator @ git+ssh://git@github.com/osrd-project/osrd.git@v0.1.4#subdirectory=python/railjson_generator',  # noqa
    'ipython',
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.jar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
